--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node": ">=22.14.0"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.15.2",
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
